--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ ImageFiltering = "6a3955dd-da59-5b1f-98d4-e7296123deb5"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LinearMaxwellVlasov = "b1137d70-0135-468f-bb3e-ace6f597c457"
+NLsolve = "2774e3e8-f4cf-5e23-947b-6d7e65073b56"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
